--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -379,34 +379,22 @@ Other examples of propagating patterns include placing hazards in tricky places 
 
 <!-- NOTE ADD MORE EVIDENCE? -->
 
-**Analysis:** This exchange shows the propagation of GDPs emerging FROM community playtesting very direct with the one asking another to help them directly. It is possible that Bertie's request to Toby is facilitated through noticed Toby helping Nadine and Harper add levels to their games.
-
-Toby's emerging roles as a specialist that the community can draw on [see similar research? Barron? ].
-
-On a practical level, this and other emerging specialisms (see also that of Nadine in Vignette 5) are welcome as a way to reduce dependence on myself as a facilitator, or to provide an alternative to the instruction-based support documents.
+**Analysis:** This exchange shows the propagation of GDPs emerging FROM community playtesting very direct with the one asking another to help them directly. It is possible that Bertie's request to Toby is facilitated through noticed Toby helping Nadine and Harper add levels to their games. Toby's emerging roles as a specialist that the community can draw on, on a practical level, and similar examples,(see also that of Nadine in Vignette 5) were welcome as a way to reduce dependence on myself as a facilitator, or to provide an alternative to the instruction-based support documents.
 
 <!-- The process of playing a game of another and sharing your appreciation of it invites participants to add new patterns to their own game. -->
 
-
-
-
-
-<!-- A different pattern of propagation was that participants notice and comment on a game element or pattern during during playtesting, and then to use supporting resources or facilitator help to implement it. A less frequent pattern involved participants' diligent and deliberate use of supporting resources to identify and implement features without peer influence. -->
-
 <!-- ADD IN FREQUENCY IF POSSIBLE - A ROUGH APPROXIMATION OF WORKING PATTERNS IN P2. -->
 
+<!-- A different pattern of propagation was that participants notice and comment on a game element or pattern during during playtesting, and then to use supporting resources or facilitator help to implement it. A less frequent pattern involved participants' diligent and deliberate use of supporting resources to identify and implement features without peer influence. -->
 
 
 
 **New GDPs emerged from existing patterns through peer activity during playtesting**
 
-In addition to the propagation of GDPs offered n the menu of supporting documentation, other gameplay patterns and related design concepts emerged organically from the community. For example, the concept of safe zone in the game of Pearl and Clive arrived as a direct result of after adding a moving enemies GDP, the extensive use of that pattern dominates the game challenge to such an extent that it is essential for players to quickly identify and use 'safe zones'.
+In addition to the propagation of GDPs offered n the menu of supporting documentation, other gameplay patterns and related design concepts emerged organically from the community. For example, Olive's concept of a level that eschews challenge and offers only rewards, a type of bonus stage pattern,  emerged through playful experimentation (see Vignette 2). Similarly, the concept of safe zone in the game of Pearl and Clive arrived as a direct result of after adding a moving enemies GDP, the extensive use of that pattern dominates the game challenge to such an extent that it is essential for players to quickly identify and use 'safe zones'.
 DEVELOP
 
-These new patterns or elements of patterns sometime introduced new concepts and associated language into the community. When participants noticed the elements and used the relevant terminology, they are engaging in what Wegner terms legitimate peripheral participation.
-
-While the use of some concepts can be seen as intentional affordance of the introduced design, some appear as a product of participants' funds of home knowledge. The concept of safe zone here has been transferred from the cultural experience of one participant in game playing into this community of game makers.
-
+These novelties may emerge spontaneously or have a source in  part participants' funds of gaming knowledge. In either case once the concept of safe zone or bonus level enters the linguistic and coding repertoire of this community of game makers, they may spread if other participants pick up on them. Even if other participants only noticed the use of GDPs and use approximate terminology to comment on them during playtesting, this form of activity can be seen as legitimate peripheral participation [@lave_situated_1991; @guzdial_imagineering_2006], and thus a helpful practice contributing to the emerging ecosystems of the learning community.
 
 ### Summary of cultural section - and signposting to next chapter
 
