adding aspect of fok

--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -312,18 +312,22 @@ Such use was present in 6 of the 12 video capture sessions analysed.
 
 One premise driving my exploration in the use of gameplay features as a feature in pedagogy is that the tacit knowledge of gaming conventions of most family members is extensive even if they are not avid gamers due to the extensive influence of video game culture and experience into mainstream culture including contexts of family life [@ito_hanging_2010; @livingstone_digital_2018], in particular retro gaming [@heineman2014public]. As such, the process of facilitating ways of surfacing and working gwith such tacit knowledge aligns with Moll's concept of funds on knowledge, and if aligned, funds of identity [@fasso_identity_2020; @esteban-guitart_funds_2014]. Within a CHAT framework these funds of identity and knowledge can be seen as tools which facilitate the transfer of potentially useful concepts across the boundaries between activity systems, in this case between home activity and that happening in this game making community, with the associated inclusive benefits of working with participants home interests explored by Barron [@barron_conceptualizing_2010; @barron_interest_2006-1] and similar work by Gutiérrez on third spaces [@gutierrez_developing_2008]. Existing research outlines motivations of social making incorporating gaming cultural elements [@ito_hanging_2010; @gee_what_2003] and the ability to make personalised game assets narratives, sustain engagement in digital making projects [@sefton-green_mapping_2013].
 
-
 In the last chapter I outlined processes facilitating participants could to create and incorporate graphical, audio assets and narratives elements into their games and, referencing Appendix. briefly outlined how these elements were themed as _Game Polish_ items within a typology of GDPs which aligned with the MDA (mechanics, dynamics and aesthetics) game element framework explored in Chapter 2. Addressing the aspect of patterns aesthetics, in Vignette 5 Molly and Nadine showing identification with graphical making process and the process of bringing it the game. Beyond their internal family interaction, they share this artistic flair and attention to detail into the emerging learning community.
 EXTEND OR SIGNPOST - ADD TO APPENDIX COMMENTARY  - CHECK WITH NEXT CHAPTER.
 
-In addition to issues of aesthetics explored in the section above, home knowledge game mechanics and dynamics, the M and D of the MDA framework also contributed to emerging cultural repertoires. Addressing experiences of game dynamics, as explored in the previous section, Vignette 4 gives several examples of how feedback of participants on the dynamics of Molly's game during playtesting. INSERT OTHER STATS FROM CODING?
+In addition to issues of aesthetics explored in the section above, home knowledge game mechanics and dynamics, the M and D of the MDA framework also contributed to emerging cultural repertoires. Addressing experiences of game dynamics, as explored in the previous section, Vignette 4 gives several examples of how feedback of participants on the dynamics of Molly's game during playtesting. Turning to game mechanics, in part two of Vignette 7, Bertie comments on Toby's game which has a dominant game experience of timed jumping: _"It’s like parkour in Minecraft but timed. It’s like playing the game Wipeout. Have you ever played Wipeout?"_. Parkour in Minecraft and Wipe out are both game experiences whose main gameplay mechanic is about judging jumps to landing accurately. Bertie makes links to his existing experience of games making comparisons between Toby's game, commercial games and his own. In doing so Bertie is able to shows his knowledge and analysis of gameplay patterns.
 
-Turning to game mechanics, in part two of Vignette 7, Bertie comments on Toby's game which has a dominant game experience of timed jumping: _"It’s like parkour in Minecraft but timed. It’s like playing the game Wipeout. Have you ever played Wipeout?"_. Parkour in Minecraft and Wipe out are both game experiences whose main gameplay mechanic is about judging jumps to landing accurately. Bertie makes links to his existing experience of games making comparisons between Toby's game, commercial games and his own. In doing so Bertie is able to shows his knowledge and analysis of gameplay patterns.
-
-LINK TO STATS from coding.
+The different types of GDPs available to participants to choose from in the menu of GDP documentation and code snippets allowed a choice over participant making paths, allowing an alignment with home interests.
 
 
 A wider exploration of use of FOK in the programme related to art and narrative is explored in chapter six.
+IS THIS NOW REALLY NEED - OR MOVE TO APPENDIX?  
+
+
+_Summary_
+LINK TO STATS from coding.
+
+While this study is exploratory, and not designed to be representational, observations from video data in this study supports existing research on use of FoK FoI in digital projects as motivating and as a way to ovecome barriers to alien cultures [].
 
 
 <!-- _Funds of knowledge from professional communities_
@@ -332,10 +336,6 @@ DROP? MENTION IF USEFUL
 A potential similar specialism was evident from Dave's guidance of Toby to access professional documentation, and engage in debugging processes using the developer tools section of the web browser. (See appendix 5.x). As a facilitator, this aligned with my previous work with Mozilla web clubs. The enthusiastic sharing of for messing around with technical web tools for learning and fun.
 
 This could have been picked up on and integrated into the design. While I did not do this, the confidence brought to the process to find resources from outside of teh walled garden of the provided resources prompted a change of game paradigm for another family who also made a top down / maze game in P3. -->
-
-
-_Summary_
-Observations from video data in this study supports existing research on FoI as motivating and inclusive.
 
 
 
