--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -423,6 +423,13 @@ This section examines the use of GDPs to facilitate guided participation via int
 <!-- - RECAP DOCUMENTATION TENSIONS HERE WITH FOCUS ON AGENCY
 - ALSO FOCUS ON MY ROLE AS A DESIGNER INTRODUCING DOCUMENTATION AND STRATEGIES (PERHAPS MAPS TOO IN LINE WITH 5TH D) -->
 
+RECENTLY IN 
+We have seen how the use of a menu of game design patterns allow participants to choose patterns to work on that match their home interests and.
+ Therefore potentially reduce.  Barriers of alienation from coding or game making culture.
+ Additionally, this section investigates how the use of a collection of a restricted collection of.  Game patterns and supporting documentation.
+ Provided opportunities and shaped the experience of participants.
+
+
 The tension between of participant choice and use and providing appropriate scaffolding materials to support implementation of code was explored in the previous chapter. The decision to base supporting resources around a menu of game design patterns was an end product of a mutual evolution.
 
 Thus GDPs were chosen by myself as a suggested project navigation framework. Given the integration of this decision into the learning design from P2 onwards,  some of the observations which observer participants using this framework may appear as a tautology. In that it is no surprise that participant use the provided framework. However the evolving use of GDPS, the variations within that use and continued adaptation of GDP use merit attention.
