--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -423,22 +423,19 @@ This section examines the use of GDPs to facilitate guided participation via int
 <!-- - RECAP DOCUMENTATION TENSIONS HERE WITH FOCUS ON AGENCY
 - ALSO FOCUS ON MY ROLE AS A DESIGNER INTRODUCING DOCUMENTATION AND STRATEGIES (PERHAPS MAPS TOO IN LINE WITH 5TH D) -->
 
-RECENTLY IN 
-We have seen how the use of a menu of game design patterns allow participants to choose patterns to work on that match their home interests and.
- Therefore potentially reduce.  Barriers of alienation from coding or game making culture.
- Additionally, this section investigates how the use of a collection of a restricted collection of.  Game patterns and supporting documentation.
- Provided opportunities and shaped the experience of participants.
+At the cultural level of analysis of activity, the previous section  outlined that providing a menu of game design patterns enabled participants to select patterns aligned with their personal interests, potentially reducing feelings of alienation from coding or game-making culture. This section also examines how a curated collection of game patterns, along with supporting documentation, created opportunities and influenced participants' experiences on an interpersonal plane of activity.
 
+The previous chapter explored, from my perspective as a facilitator, the use of a menu of GDPs helped address a the tension between of participant choice the need for supporting materials on code implementation. Vignette 9, shows one of the few short episodes of my addressing the whole group class talk where I outline the webpage listing the menu of patterns _"It’s almost like this is our control panel. (you decide) what do you want to do next and we jump off from there."_
 
-The tension between of participant choice and use and providing appropriate scaffolding materials to support implementation of code was explored in the previous chapter. The decision to base supporting resources around a menu of game design patterns was an end product of a mutual evolution.
+Given this integration of this decision into the learning design from P2 onwards, it would appear natural that participant use the provided framework. However the evolving use of this documentation, the variations within that use and interpersonal interactions use merit attention.
 
-Thus GDPs were chosen by myself as a suggested project navigation framework. Given the integration of this decision into the learning design from P2 onwards,  some of the observations which observer participants using this framework may appear as a tautology. In that it is no surprise that participant use the provided framework. However the evolving use of GDPS, the variations within that use and continued adaptation of GDP use merit attention.
+<!-- The decision to base supporting resources around a menu of game design patterns was an end product of a mutual evolution. -->
 
-My data does not capture this stage of the use of starting activities which selected key changes to code the P2 when participants used this resource. However I've used the cards and template game on many other groups and public events to replicate the very early stages of interaction. From journal notes on these repeated  observations,
+<!-- My data does not capture this stage of the use of starting activities which selected key changes to code the P2 when participants used this resource. However I've used the cards and template game on many other groups and public events to replicate the very early stages of interaction. From journal notes on these repeated  observations,
 Participants used both  printed resources and where possible direct forms of help between peer participants and any facilitators present.
-other COMMENTs HERE
+other COMMENTs HERE -->
 
-The vignette in this chapter shows the parent Suzanna's use of a step by step tutorial to address the child's objective of implementing chosen GDPs. Olivia is limited in her technical skills but leverages the concept of two GDPs in particular to persist in problem solving using the tutorial and trouble shooting using facilitator help. Given Olivia's limited computer literacy (explored later) the idea of the GDP is likely to be from a cultural source, most likely playtesting.   
+Vignette 2 in this chapter shows the parent Suzanna's use of a step by step tutorial to address the child's objective of implementing chosen GDPs. Olivia is limited in her technical skills but leverages the concept of two GDPs in particular to persist in problem solving using the tutorial and trouble shooting using facilitator help. Given Olivia's limited computer literacy (explored later) the idea of the GDP is likely to be from a cultural source, most likely playtesting.   
 
 By way of contrast, Vignette.toby showed the child shares an independent style with Suzanna but engages in lone working, copying a code from code snippet example of the game design pattern which he chose from a graphical menu of patterns. His independence in adding new features using supporting documentation without facilitator support helps him take on a mantle of a mentor inspiring and helping others add the same GDPs to their games.
 
@@ -458,7 +455,6 @@ Key characteristics of structuring support around quick start activities and a s
 - providing shorter, just-in-time tutorials
 to reduce barriers associated with more extensive instruction-based approaches including barriers of literacy [@dietz_design_2021; @resnick_coding_2020].
 - The use of a menu / collection of resources can be considered an inclusive educational practice and offer a rich description of a concrete example which aims to align to inclusive, practice-based frameworks like UDL and PBL. While this may involve more work in advance, the benefits to inclusive practice merit it.
-
 
 
 <!--
@@ -829,42 +825,18 @@ This area opens some interesting lines of questioning which are beyond the full 
 Thus, mirroring the proposition of UMC and more specifically half baked games theory, in that a incomplete / templated game are motivates initial participation, glitch bugs which move game into a broken  state in regards the targeted GDP may have a similar or even  potential for motivation.
 EXPLAIN?
 
-
-
-In critique of online tutorials researchers note  few provide common errors[@kim_pedagogical_2017]. This lack of problem solving techniques communicated in online tutorials may addressed through use of GDPs.
+In critique of online tutorials researchers note few provide common errors[@kim_pedagogical_2017]. This lack of problem solving techniques communicated in online tutorials may addressed through use of GDPs.
 
 The debugging process at times surfaced and allow the exploration of surfacing of computational thinking concepts, a topic explored as part of the next section.
 
 ## The role of GDPs in the personal appropriation of concepts and processes (500 - Target 750)
 
-**computational, design and systems concepts**
 
+Rogoff's third plane of analysis, one  which mostly closely aligns with much educational research is that of personal appropriation. Rogoff is careful to underline the bi-directional nature of the appropriation of personal knowledge, emphasising Vygotsky's foundational view of knowledge as being mutually constituted as participants feed their interpretation of knowledge back into the communities of which they are a part.  
 
-<!-- While the contextual factors involved in this learning environment did not require alignment with a particular curriculum or external examination, computing, design and systems concepts have the potential to arise as part of the game making process. -->
+As outlined in Chapter 2, the focus on skills and knowledge developed by participants is one of the strongest threads in related research on digital coding and game making, and particulary in that of constructionist school [@kafai_constructionist_2015-1; @papert_mindstorms:_1980]. Papert's research on Microworlds saw one of the roles learning designers to shape the affordances of playful learning environments to steer learners to explore scientific concepts,  mathematical concepts, for example geometry in Turtle computing. In this research, detailed study of young coders evolving code creations and accompanying interview data allowed a close study of the personal appropriation, including elements of understanding, application and sharing back this knowledge via created and shared digital projects. Much subsequent research on the use of coding to develop both concrete and more abstract computational thinking skills, has neglected this social and perspectives [find source], instead focusing on a personal dimension of learning as a curricular skill to be absorbed and tested. By way of contrast, this study is aligned with the development of the constructionist movement towards socio-cultural approaches to transcend individual personal conceptions of knowledge, exemplified by the issues associated with the UK computing curriculum. In this informal learning context, there was scant desire from participants to explore concepts aligned with computing curriculum, instead driven more by practical desire to make a game using the tools provided.
 
-<!-- In particular, the facilitator has the ability to surface and to explore more abstract concepts present in the concrete application of code that have emerged organically from the participants drives to implement particular patterns.    -->
-
-<!--
-Toby to find patterns and to duplicate them in different situations.
- 2019-05-08-te - With prompting from parent the child is able to recognise, duplicate and alter the update code for accepting left and right key input to change character x-axis velocity. After update and test iterations they change this to up and down key input to update y-axis velocity. The 3M approach lends itself well to exploring pattern recognition as patterns are readily available to participants in starting code and the extra patches that are added. -->
-<!--
- Also the knowledge of the GDP helps ability to recognise patterns in the code. Left / right -> Up / Down -->
-
-Following Papert and subsequent research on Microworlds, learning designers can shape what they want learners to encounter and explore [MINDSTORMS?]. In Papert's research, the tartget concepts were  mathematical concepts, for example geometry in Turtle computing. The use of x and y allowed a close study of personal dimensions.
-
-Much research since the popularity of CT, has focused on those aspects, on a personal dimension of learning.
-
-While, this thesis focuses on community aspects in line with my own interests, There are significant possibilities to alter this design to suit more exploration of systems concepts and computational thinking. I have written a chapter which explores these aspects with recommendations for practitioners [@chesterman_game_2023], a summary of which and an additional commentary follows.
-
-
-
-One of my tensions explored in chapter 5 and explored in Appendix.designnarrative2 was between a motivation to align the learning experience of making games to computational thinking.  
-
-I also noted my own caution about overloading learners with shifting and competing goals. My concern hinged on the potential disorientation of the learner that imposed shifts of focus may provoke. As learners shift between different stages of creation the object of their activity shifts from the larger goal of making an engaging game to a narrower goal of implementing a game design pattern to narrower still of completing one of several actions to complete the implementation of a GDP.
-
-
-Facilitators can use a prepared collection of GDPs to facilitate participants to surface chosen computational, design and systems concepts embedded in games. The use of a map of learning dimension in the studies design was examined in relation to contextual tensions relating to the motivations surrounding of curriculum concepts.
-OR WAS IT - WAS THIS CUT?
+Despite this positioning, given the potential to adapt this learning design to a more formal environment to address needs outlined in the introductory chapter, from P2 onwards I began to augment the learning design to suit curriculum oriented teaching and assessment of computational thinking concepts and skills, a process which resulted in a learning map of curricular concepts included here as Table 6.x .
 
 |      Coding Concepts    | Systems Patterns    | Design Practices|
 |--------------|-----------|------------|
@@ -877,48 +849,21 @@ OR WAS IT - WAS THIS CUT?
 | Change Listener |    | Debugging   |
 | Input Event |   | Reusing and Remixing      |
 
-Table 1.1. Learning Dimensions of the 3M Game Making Model
+Table 6.x. Learning Dimensions of the 3M Game Making Model
 
+Appendix.learning map explores in more detail the evolution of this map, which acknowledges significant tensions in integration of concepts into a informal context, and draws on the process and rationale of Bevan and Petrich's  [-@bevan_learning_2015; -@petrich_it_2013] work to bring a similar learning map to a seemingly chaotic tinkering and making process in museum contexts. A summary of my book chapter [@chesterman_game_2023] exploring these issues with recommendations for practitioners is included in Appendix.learning.
 
-While there is a lot of potential, building testable progress in  CT and other personal dimensions are not explored significantly in this study, but are explored extensively in other research as explored in the literature review.
+This exploration focuses on the potential of the 3M learning design rather than making claims on the suitability to develop CT via game making which is explored extensively in other research. Conceptions of personal appropriation should not be limited to only the curricular concepts included in the learning map, the many of the behaviours explored above show both the appropriation and feeding back of varied understandings of game design patterns and related concepts and skills. The process of reusing and modify code to create a computer game can surface both abstract and concrete computing concepts present in the concrete application of code that have emerged organically at different stages of the creative process. While the design of this study does not suit full exploration of the personal plane of activity, the repeated, solo, incremental changes of the details of implementation of game design patterns indicate a personal appropriation of concepts like game feel and challenge and design processes.
 
-This can help justify activities in formal contexts as per Bevan and Petrich's work on tinkering. However, in this learning context the motivations of the learners both children and adults differ from  formal schooling setting and its requirements of teaching to a curriculum and potential exam content. Thus as there was no external imposition, and no organic desire to explore more abstract concepts.
+Given that this dimension is not explored in the thesis which has a greater focus on community and social aspects of use of GDPs, examples of personal appropriation are included in Appendix.learning
 
-<!-- , I could trust my instincts as a facilitator to not detract attention from participants following an organic and flexible pattern of implementation, self-testing, improvement and playtesting. -->
-
-
-<!-- In the language of activity theory the change of objective denotes is a shift in scope of the activity system. -->
-
-
-**Participants appropriate such concepts and feed them back into the community.**
-
-This dimension is not fully explored in the thesis which has a greater focus on community and social aspects of use of GDPs.
-
-However, following Rogoff's interpretation the personal appropriation of concepts is demonstrated in community activity through evolving peer practices. As one-to-one instruction from facilitators was limited which encouraged the community to teach each other.
-
-The process of reusing and modify code to create a computer game can surface both abstract and concrete computing concepts present in the concrete application of code that have emerged organically at different stages of the creative process.
-The repeated, solo, incremental changes of the details of implementation of game design patterns indicate a personal appropriation of concepts like game feel and challenge and broad concepts of CT based on Resnick and Brennan's framework.
-
-The following section outlines some examples:  
+Given The following section outlines some examples:  
 
 EXAMPLE/S:
 
 BRIEF EXAMPLES FROM DATA FOLLOW
 
-
-
 <!-- Here learner agency is transformative not only of personal dimensions of learning but also the cultural setting, practices and tools available to learners. The process of playtesting other games allowed participants to share their on emerging interpretations of game making concepts like game feel and challenge without being directly taught. Further, the community sense of what is appropriate of fun evolves as mutually and therefore cannot be taught explicitly. -->
-
-<!-- Even, taking Wing's more abstract definition of CT, many examples arise in recorded interactions without being explicitly taught.
-
-_Decomposition_: example of parents helping children break a larger problems into more manageable steps e.g one parent suggests to his child "Save that for version 1.1".  
-_Generalisation / pattern recognition_ is present in the majority of participants as patterns are readily available to participants in starting code and the extra patches that are added. The process is repeated.
-_Sequencing / algorithms_ are frequently explored in the resolution of errors with participants. In one interaction with Sh, exploring how a bracket placed in the wrong place can effectively break the game yielded a productive discussion on the importance of correct code sequencing (PERHAPS INCLUDE AS APPENDIX?). _Abstraction_, identified by Wing as the most vital CT concept, merits a deeper examination and is covered in a later section of this chapter. -->
-
-<!-- Beyond this broad mapping of systems and computing concepts to aid facilitators to highlight I also sketched out metacognitive activities to explore these concepts on completion of each GDP. As explored in the design chapter, later revisions of the design of supporting materials for each GDP included links to online descriptions of design, systems and computational concepts. Thus, beginning with experience and progressing to analysis in a sway that mirrors reflective professional practice. However analysis of my journal entries show an ongoing reluctance to shift learners away from the practical implementation of repeated game design patterns to focus on more abstract, de-contextualised conceptions of the knowledge. -->
-
-<!-- My intuitive reluctance to impose shifts in the scope of activity systems, can be interpreted through the lens of TADS. For me to prompt a shift to a  activities to reinforce recognitions and connection of learner generated code to computing and systems concepts, would impose a objective (first stimulus) and expose a new set of secondary stimuli for learners to draw on.
-THIS SECTION NEEDS DEVELOPMENT AND COMPLEXIFICATION IN RELATION TO EXISTING RESEARCH. -->
 
 ## Discussion
 
